--- a/deltaducks/build.gradle
+++ b/deltaducks/build.gradle
@@ -14,6 +14,15 @@ buildscript {
     }
 }
 
+dependencyLocking {
+    lockAllConfigurations()
+}
+
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 30, 'days'
+    resolutionStrategy.cacheDynamicVersionsFor 30, 'days'
+}
+
 allprojects {
     apply plugin: "eclipse"
 
@@ -92,6 +101,7 @@ project(":tests") {
 //        }
 
         implementation project(":core")
+        implementation project(":desktop")
 
         implementation "junit:junit:4.+"
         implementation "org.mockito:mockito-all:1.9.+"
