Attempt running modern JUnit 5 + Mockito 4 headless testing

--- a/deltaducks/tests/build.gradle
+++ b/deltaducks/tests/build.gradle
@@ -10,3 +10,7 @@ project.ext.assetsDir = new File("../core/assets")
 eclipse.project {
     name = appName + "-tests"
 }
+
+test {
+    useJUnitPlatform()
+}
