--- a/deltaducks/build.gradle
+++ b/deltaducks/build.gradle
@@ -35,6 +35,8 @@ allprojects {
         ashleyVersion = '1.7.3'
         aiVersion = '1.8.2'
         gdxControllersVersion = '2.1.0'
+        mockitoversion = '4.0.0'
+
     }
 
     repositories {
@@ -83,34 +85,17 @@ project(":tests") {
 
     dependencies {
 
-        /**
-         * If you do have some classes to test in os specific code you may want to uncomment
-         * some of these lines.
-         *
-         * BUT: I recommend to create seperate test sub projects for each platform. Trust me :)
-         *
-         */
-
-//        compile project(":android")
-//        compile project(":html")
-//        compile project(":desktop")
-
-
-//        if(System.getProperty("os.name").toLowerCase().indexOf("mac") >= 0) {
-//        	compile project(":ios")
-//        }
-
         implementation project(":core")
         implementation project(":desktop")
 
-        implementation "junit:junit:4.+"
-        implementation "org.mockito:mockito-all:1.9.+"
+        implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+        implementation 'org.mockito:mockito-junit-jupiter:4.3.1'
 
         implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
 
-        testImplementation 'junit:junit:4.+'
-        testImplementation "org.mockito:mockito-all:1.9.+"
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+        testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
 
         testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
