Enables mocking static methods via mockito-inline! I could jump for joy

--- a/deltaducks/desktop/build.gradle
+++ b/deltaducks/desktop/build.gradle
@@ -33,6 +33,10 @@ task dist(type: Jar) {
     with jar
 }
 
+dependencies {
+    implementation 'org.mockito:mockito-inline:4.4.0'
+}
+
 
 dist.dependsOn classes
 
