--- a/deltaducks/build.gradle
+++ b/deltaducks/build.gradle
@@ -90,12 +90,14 @@ project(":tests") {
 
         implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
         implementation 'org.mockito:mockito-junit-jupiter:4.3.1'
+        implementation 'org.mockito:mockito-inline:4.4.0'
 
         implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
 
         testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
         testImplementation 'org.mockito:mockito-junit-jupiter:4.3.1'
+        testImplementation 'org.mockito:mockito-inline:4.4.0'
 
         testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
