--- a/deltaducks/build.gradle
+++ b/deltaducks/build.gradle
@@ -29,7 +29,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = "delta"
-        gdxVersion = '1.10.0'
+        gdxVersion = '1.10.1-SNAPSHOT'
         roboVMVersion = '2.3.12'
         box2DLightsVersion = '1.5'
         ashleyVersion = '1.7.3'
