--- a/deltaducks/build.gradle
+++ b/deltaducks/build.gradle
@@ -60,9 +60,9 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
         api 'com.github.tommyettinger:textramode:0.0.2'
-//        api ("com.badlogicgames.gdx:gdx-tools:$gdxVersion") {
-//            exclude group: 'com.badlogicgames.gdx', module: 'gdx-backend-lwjgl'
-//        }
+        api ("com.badlogicgames.gdx:gdx-tools:$gdxVersion") {
+            exclude group: 'com.badlogicgames.gdx', module: 'gdx-backend-lwjgl'
+        }
     }
 }
 
